fix(gux-flyout-menu): fixed styling to align with Spark
COMUI-575

--- a/src/components/beta/gux-flyout-menu/gux-menu/gux-submenu/gux-submenu.less
+++ b/src/components/beta/gux-flyout-menu/gux-menu/gux-submenu/gux-submenu.less
@@ -18,7 +18,7 @@ gux-submenu {
     width: 100%;
     width: @gux-menu-item-width;
     height: 32px;
-    padding: 0 16px;
+    padding: 0 12px 0 16px;
     line-height: 32px;
     color: @gux-type;
     background-color: @gux-off-white;
@@ -43,8 +43,8 @@ gux-submenu {
       flex: 0 0 auto;
       align-self: auto;
       order: 0;
-      width: 10px;
-      height: 10px;
+      width: 16px;
+      height: 16px;
     }
   }
 
